...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".MapsActivity" />

    <LinearLayout
...
