...
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Building Code 5"
        android:inputType="text"
        android:textSize="24sp"
        android:id="@+id/code5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code4"
        >
    </EditText>

...
